--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -27,6 +27,9 @@
         <activity android:name=".Registration"></activity>
         <activity android:name=".StartScreen"
             android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".StartHindi"
+            android:theme="@android:style/Theme.NoTitleBar"></activity>
+       
         <activity android:name=".Instructions"
             android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".NotificationScreen"
